added refuel application service and several improvement